<resources>
    <string name="app_name">JoelMonteroPrueba01</string>
    <string name="txt_nombres">Nombre</string>
    <string name="txt_apellidos">Apellido</string>
    <string name="txt_Dividendo">Dividendo</string>
    <string name="txt_Divisor">Divisor</string>
    <string name="txt_Entera">Entera</string>
    <string name="txt_Residuo">Residuo</string>
    <string name="btn_siguiente">Siguiente</string>
    <string name="btn_mostrar_resultaos">Mostrar Resultados</string>
    <string name="btn_cerrar">Cerrar</string>
    <string name="txt_Invertido">Invertido</string>
    <string name="txt_Numero">Número</string>
</resources>